2003-02-10  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/385:
	* lib/depcomp (makedepend): Strip any libtool call, before
	running makedepends.
	* tests/depcomp4.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	Reported by Jeff Squyres.

	Related to PR automake/385:
	* lib/depcomp (dashmstdout): Do not use `-o /dev/null', or gcc will
	write dependencies to /dev/null.  `-o /dev/null' was added
	on 2002-06-13 just because I tried to replace `-o foo.o' by something
	else and didn't thought about removing it entirely.
	* tests/depcomp3.test: New file.
	* tests/Makefile.am (TESTS): Add it.

	* automake.in (BEGIN): Override $ENV{'SHELL'} with ./configure's
	SHELL for DJGPP.
	Suggested by Richard Dawe.

2003-02-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Summarize recent changes.

	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
	(distcleancheck): New nodes.

2003-02-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_files): Don't complain that
	AM_INIT_AUTOMAKE comes from an old version if it was not found.

2003-02-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Recompute
	indexes of header files so we create stamp files with
	the right numbers when config.status is run on some headers.
	* tests/stamph2.test: Check for this.
	Reported by Sander Niemeijer.

2003-02-02  Jeremy Nimmer  <jwnimmer@alum.mit.edu>  (tiny change)

	For Debian Bug #39542:
	* automake.texi (Invoking Automake, Optional): Document how
	AC_CONFIG_AUX_DIR interacts with missing files.

2003-01-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Program and Library Variables): Clarify that
	_LIBADD is for libraries and _LDADD for programs.

2003-01-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Python): Explain that directory variables start
	with either ${prefix} or ${exec_prefix}, and point to the
	`Installation Directory Variables' section of the Autoconf manual.
