@@ -1,3 +1,8 @@
+2003-02-10  Richard Dawe  <rich@phekda.freeserve.co.uk>
+
+	* Makefile.am: Substitute @SHELL@ in automake.in and aclocal.in.
+	This makes the setting of SHELL work for DJGPP.
+
 2003-02-10  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	For PR automake/385:
